# cpp_billet

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md  WindowsKitsFix.reg  build.sh
cmake/: common.cmake  conan.cmake  install.cmake  post.cmake
src/: constants.h  main.cpp
src/app/: App.cpp  App.h  CMakeLists.txt  LogHandler.cpp  LogHandler.h
src/app/ui/: QMLWindow.cpp  QMLWindow.h
src/resources/: CMakeLists.txt  resources.qrc
src/resources/qml/: Constants.js  main.qml
src/utils/: CMakeLists.txt  ScopeGuard.h  enum.h  random.cpp  random.h
src/utils/logging/: CMakeLists.txt  Logger.cpp  Logger.h  LoggingSettings.h  log.h  log_common.h
src/utils/logging/format/: Qt.h
src/utils/qt/: CMakeLists.txt  Delayed.cpp  Delayed.h  RunGuard.cpp  RunGuard.h  hash.cpp  hash.h  settings.cpp  settings.h  slumber.cpp  slumber.h
tests/: CMakeLists.txt
tests/test/: test.cpp
tools/: dev-init.sh  package.sh  profile.sh  reformat.sh  static_analysis.sh  test.sh
tools/wsl/: install-icu.sh
